css/custom-ui.css
.pinned-footer {
    margin: 0 auto;
    width: 100%;
    position: fixed;
    text-align: center;
    bottom: 0;
    padding-bottom: 0;
    font-family: 'proxima_nova_altbold' !important;
    z-index: 1001;
}

.pinned-footer .dropdown-trigger {
    height: 48px;
    line-height: 48px;
    border-radius: 24px;
    width: 100%;
    -webkit-box-shadow: none !important;
    box-shadow: none !important;
    color: #73b420;
    font-size: 18px;
    background-color: white;
    text-transform: none;
    text-align: center;
}

.dropdown-content li > a {
    text-align: center;
    color: black;
    font-size: 18px;
}

.current-location {
    color: #73b420 !important;
}

.pinned-footer .dropdown-content {
    border-radius: 24px;
    -webkit-box-shadow: none !important;
    box-shadow: none !important;
}

#nav-table {
    margin: 0 auto;
    line-height: 0;
}

@media only screen and (min-width: 500px) {
    #nav-table {
        width: 500px;
    }
}
.pulse::before {
    background-color: white !important;
}
.custom-float-btn {
    background-color: rgba(255,255,255,0);
    color: rgba(255,255,255,0);
    overflow: visible;
    -webkit-box-shadow: none !important;
    box-shadow: none !important;
}

.btn-floating {
    -webkit-box-shadow: none !important;
    box-shadow: none !important;
}

.custom-float-btn:hover {
    background-color: rgba(255,255,255,0);
    color: rgba(255,255,255,0);
}
.nav-buttons {
    width: 68px;
    padding: 10px;
    margin: 0;
    height: 68px;
}

.nav-dropup {
    padding: 0;
    margin: 0;
}

.btn-floating.btn-large {
    width: 48px !important;
    height: 48px !important;;
}

.fixed-action-btn {
    right: 10px !important;
    top: 10px !important;
}

#captions_text {
    right: 68px !important;
    top: 10px !important;
    width: 250px;
    height: 48px;
    padding: 5px 10px;
    position: fixed;
    background: white;
    font-family: 'Proxima Nova';
    font-size: 8pt;
    line-height: 10pt;
    border-radius: 10px;
    overflow:auto;
}

.fixed-action-btn.direction-bottom {
    padding: 0 0 0 0 !important;
}

.fixed-action-btn.direction-bottom ul {
    top: 45px !important;
}

.fixed-action-btn.direction-bottom ul li {
    margin: 10px 0 0 0 !important;
}

.btn-large {
    height: 48px !important;
    line-height: 48px !important;
}

.overlay {
    position:fixed;
    top:0;
    left:0;
    background:rgba(202,86,153,1);
    z-index:2000;
    width:100%;
    height:100vh;
    font-family: 'Proxima Nova' !important;
    color: white;
    display: block;
}

#loading-slide {
    width: 250px;
    margin: auto;
    font-size: 14px;
    position: relative;
    bottom: 0;
}

.vertical-center {
    position: relative;
    top: 50%;
    transform: translateY(-50%);

}

.loader {
    font-size: 10px;
    margin: 5px auto;
    text-indent: -9999em;
    width: 40px;
    height: 40px;
    border-radius: 50%;
    background: #ffffff;
    background: -moz-linear-gradient(left, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
    background: -webkit-linear-gradient(left, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
    background: -o-linear-gradient(left, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
    background: -ms-linear-gradient(left, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
    background: linear-gradient(to right, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
    position: relative;
    -webkit-animation: load3 1.4s infinite linear;
    animation: load3 1.4s infinite linear;
    -webkit-transform: translateZ(0);
    -ms-transform: translateZ(0);
    transform: translateZ(0);
}
.loader:before {
    width: 50%;
    height: 50%;
    background: #ffffff;
    border-radius: 100% 0 0 0;
    position: absolute;
    top: 0;
    left: 0;
    content: '';
}
.loader:after {
    background: rgba(202,86,153,1);
    width: 75%;
    height: 75%;
    border-radius: 50%;
    content: '';
    margin: auto;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
}
@-webkit-keyframes load3 {
    0% {
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(360deg);
        transform: rotate(360deg);
    }
}
@keyframes load3 {
    0% {
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(360deg);
        transform: rotate(360deg);
    }
}

#map-overlay {
    position:fixed;
    top:0;
    left:0;
    background:rgba(255,255,255,0.9);
    z-index:1000;
    width:100%;
    height: 100%;
    font-family: 'Proxima Nova' !important;
    visibility: hidden;
}
#map-div {
    margin: auto;
    width: 100%;
    height: calc(100% - 68px);
    display: table;
    padding: 10px 10px 0 10px;
    overflow: hidden;
}

#map-title {
    height: 24pt;
    font-size: 24pt;
    color: #73b420;
    font-family: 'proxima_nova_altbold' !important;
    display: table-row;
    width: 100%;
}
#map-title-text {
    display: inline-block;
}

#map_exit {
    width: 48px;
    height: 48px;
    display: block;
    float: right;
    cursor: pointer;
}

#map-area {
    width: 100%;
    position: relative;
    display: table-row;
}


#map-img {
    height: 100%;
    width: 100%;
    object-fit: contain;
}

.map-location {
    position: absolute;
    cursor: pointer;
    background: #73b420;
    border-style: solid;
    border-color: #565A56;
    border-width: 1px;
}

.fixed-action-btn {
    height: 48px;
}

